--- a/Linear Regression - Salary Prediction.ipynb
+++ b/Linear Regression - Salary Prediction.ipynb
@@ -794,11 +794,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "c8991de5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved to linear_regression_model.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "model_file_path = 'linear_regression_model.pkl'\n",
+    "\n",
+    "# Open the file in binary write mode\n",
+    "with open(model_file_path, 'wb') as file:\n",
+    "    # Serialize and save the model to the file\n",
+    "    pickle.dump(model, file)\n",
+    "\n",
+    "print(f\"Model saved to {model_file_path}\")\n"
+   ]
   }
  ],
  "metadata": {
